--- a/portfolio_about/about.css
+++ b/portfolio_about/about.css
@@ -140,6 +140,7 @@ body{
 .pf-box p{
     padding: 10px;
     letter-spacing: 1px;
+    line-height: 2rem;
     font-family: "myfont-nm", serif; 
     color: #333;   
 }
@@ -192,12 +193,15 @@ body{
 img,
 p{
     padding: 10px;
+    line-height: 2rem;
 }
 
 .skill{
     text-align: center;
     letter-spacing: .2;
     padding-top: 20px;
+    width: 70%;
+    margin: 0 auto;
 }
 
 /* コンタクト */
@@ -237,7 +241,7 @@ p{
 }
 
 /* レスポンシブ */
-@media screen and (min-width:320px) and (max-width:600px){
+@media screen and (max-width:715px){
     #g-nav {
       display: flex;
       justify-content: center;
@@ -277,7 +281,9 @@ p{
 }
 
 .pf-box {
-    padding: 30px 0;
+    padding: 60px 0;
+    width: 80%;
+    margin: 0 auto;
   }
 
 .textarea{
@@ -288,8 +294,49 @@ p{
 .contact-text-box {
     width: 70%;
 }
-}  
-  @media screen and (min-width:320px) and (max-width:380px){
 
+.skill {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.contact_bg {
+    background: #fff;
+    width: 100%;
+    height: 300px;
+}
+
+}  
+  @media screen and (min-width:320px) and (max-width:600px){
+    .pf-box {
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .copy {
+        margin: 0 auto;
+        width: 80%;
+        margin-bottom: 100px;
+    }
+
+    .text-box {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .textarea {
+        display: flex;
+        align-items: center;
+        margin: 0 auto;
+        flex-direction: column;
+    }
+
+    .contact_bg {
+        background: #fff;
+        width: 100%;
+        height: 300px;
+    }
   
   }
