--- a/portfolio_works/works-4/p_works4.css
+++ b/portfolio_works/works-4/p_works4.css
@@ -240,7 +240,6 @@ dl{
 .design_h2{
   border-bottom: 1px solid #222;
   letter-spacing: 2px;
-  padding-top: 80px;
 }
 
 #detail-box h3{
@@ -367,6 +366,7 @@ footer{
     display: flex;
     justify-content: center;
     width: 100%;
+    height: 80px;
     z-index: 99;
     position: fixed;
     right: 0px;
@@ -383,9 +383,9 @@ footer{
 }
 
 #g-nav li {
-  margin-top: 40px;
   font-family: "myfont-nm";
   writing-mode: horizontal-tb;
+  margin-top: 0px;
 }
 
 #g-nav li a{
@@ -403,12 +403,37 @@ footer{
     padding: 80px;
     flex-direction: row;
 }
+
+#detail-box, #detail-box-2,#design-main {
+  margin: 0 auto;
+  padding-top: 120px;
 }
 
-@media screen and (min-width:320px) and (max-width:380px){
+.works3 {
+  margin: 160px 0px 0px 0px;
+}
+
+.design-line-l, .design-line-r{
+  width: 48%;
+}
+}
+
+@media screen and (min-width:320px) and (max-width:400px){
+  .w3-textbox {
+    margin: 80px 10%;
+}
   .news-list {
     display: flex;
     flex-direction: column;
+}
+
+.works3 img,
+.content-area,
+.contents-site,
+#detail-box,
+#detail-box-2,
+#design-main{
+  width: 80%;
 }
 
 .news-list dd,
@@ -433,5 +458,17 @@ width: 100%;
 .arrow_animation_button, .arrow_animation_button-back, .arrow_animation_button-next {
   text-align: center;
   padding: 30px;
+}
+
+.arrow_animation_button-next::after {
+  top: 0;
+  bottom: 20%;
+  right: 5px;
+}
+
+.arrow_animation_button-back::before {
+  top: 0;
+  bottom: 20%;
+  left: 5px;
 }
 }
