--- a/top.css
+++ b/top.css
@@ -63,7 +63,7 @@ body{
     top:0;
     width:100%;
       height: 100vh;/*ナビの高さ*/
-    background:rgba(255,255,255,0.4);/*背景を少し透過させる*/
+    background:rgba(255,255,255,0.6);/*背景を少し透過させる*/
       /*動き*/
     transition: all 0.5s;
   }
@@ -234,8 +234,9 @@ body{
 .works_area::after{
   content:"";
   display: block;
-  width:397px;
+  width: 397px;
 }
+
 
 /* フェードイン */
 .fadeUpTrigger{
@@ -427,6 +428,14 @@ footer p{
 }
 
 /* レスポンシブ対応 */
+@media screen and (min-width:1587px) and (max-width:2000px){
+  .works_area::after{
+    content:"";
+    display: block;
+    width:1190px;  }
+}
+
+
 @media screen and (min-width:320px) and (max-width:700px){
   .f-area {
     display: flex;
